--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,8 +1,8 @@
 /* colours */
 :root{
-  --primary: #FFE9D2;
-  --secondary: #FFE1C4;
-  --title: #FF8816;
+  --primary: rgba(5, 138, 23, 0.808);
+  --secondary: rgba(43, 253, 71, 0);
+  --title: #fdfdfd;
 }
 
 /* layout styles */
@@ -60,14 +60,14 @@ nav .sidenav-trigger{
 
 /* form-styles */
 .add-btn{
-  background: var(--title) !important;
+  background: rgba(5, 138, 23, 0.808);
 }
 input{
-  box-shadow: none !important;
-  -webkit-box-shadow: none !important;
+  box-shadow: none;
+  -webkit-box-shadow: none;
 }
 .side-form button{
-  background: var(--title);
+  background: rgba(5, 138, 23, 0.808);
   box-shadow: 1px 1px 3px rgba(90,90,90,0.2);
 }
 form .input-field{
